@@ -8,6 +8,7 @@ and ideas to make this software available.
 	Steven Barrus <sbarrus@eng.utah.edu>
 	David Begley <david@avarice.nepean.uws.edu.au>
 	Maxim Batourine <Batourine_M@ald.utoronto.ca>
+	Michael Brownea <mbrown@fensystems.co.uk>
 	Max Caines <Max.Caines@wlv.ac.uk>
 	Peter Cherney <peterc@luddite.com.au>
 	Howard Chu <hyc@highlandsun.com>
